[project]
name = "de-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.6.0",
    "numpy>=2.2.6",
    "pypdf>=6.7.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.3",
    "ty>=0.0.19",
]

[tool.ty.environment]
python = ".venv"
