[project]
name = "de-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cohere>=5.20.7",
    "datasets==3.6.0",
    "faiss-cpu>=1.13.2",
    "numpy>=2.2.6",
    "pypdf>=6.7.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.2.3",
]

[tool.setuptools.packages.find]
include = ["de_rag*"]

[tool.ty.environment]
python = ".venv"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "de_rag"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ragas>=0.3.2",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
ner = [
    "gliner>=0.2.25",
]
